# Minimize-Sat-Model

./: CMakeLists.txt  README.md  main.cpp
minisat/core/: Solver.cc  Solver.h
